--- a/package.json
+++ b/package.json
@@ -2,12 +2,19 @@
   "name": "clicky-car-game",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://2thao21.github.io/clicky-car-game/",
   "dependencies": {
+    "gh-pages": "^2.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.5",
     "react-dom": "^16.8.5",
-    "react-scripts": "2.1.8"
+    "react-materialize": "^3.0.2",
+    "react-scripts": "2.1.8",
+    "react-transition-group": "^2.7.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
